fix: Long title word overflow

--- a/src/components/SceneCard/Details/Details.scss
+++ b/src/components/SceneCard/Details/Details.scss
@@ -55,6 +55,7 @@
 
   .vsc-title {
     grid-row: title-top / title-bottom;
+    overflow-wrap: anywhere;
   }
 
   /* -------------------------------- Key data -------------------------------- */
